# google-adk

./: .flake8  .gitignore  BEFORE_AFTER.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPROVEMENTS.md  INDEX.md  LICENSE  Makefile  QUICKSTART.md  README.md  SUMMARY.md  pyproject.toml  setup.py
hello-world/: .env.example  README.md
hello-world/my_agent/: __init__.py  agent.py  evalset29db67.evalset.json
ticketpro/: .env.example  README.md  inspect_agent.py  requirements.txt  verify_agent_flow.py
ticketpro/helpdesk_agent/: __init__.py  agent.py  helpdesk_core_flows.evalset.json
ticketpro/schemas/: __init__.py  ticket.py
ticketpro/tools/: __init__.py  helpdesk_tools.py
